--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+
+springfood.jwt.keystore.path=keystores/springfood.jks
+springfood.jwt.keystore.password=123456
+springfood.jwt.keystore.keypair-alias=springfood
