--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8081
 
+spring.datasource.url=jdbc:mysql://localhost/springfood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=2
+
 springfood.jwt.keystore.path=keystores/springfood.jks
 springfood.jwt.keystore.password=123456
 springfood.jwt.keystore.keypair-alias=springfood
